--- a/src/main/cliapp/src/layout/sass/_dashboard.scss
+++ b/src/main/cliapp/src/layout/sass/_dashboard.scss
@@ -34,6 +34,10 @@
             &.revenue {
                 background-color: #007be5;
             }
+
+            &.agm {
+                background-color: rgb(239, 98, 98);
+            }
         }
     }
 
