Move custom classes to layout.scss

--- a/src/main/cliapp/src/assets/layout/layout.scss
+++ b/src/main/cliapp/src/assets/layout/layout.scss
@@ -1,3 +1,19 @@
 @import "./_variables";
 @import "./sass/_layout";
 @import "./_overrides";
+
+.wrap-word {
+    overflow-wrap : break-word;
+}
+
+.max-w-25rem {
+	max-width : 25rem;
+}
+
+.max-w-35rem {
+	max-width : 35rem;
+}
+
+.max-w-40rem {
+	max-width : 40rem;
+}
