Move custom classes to appropriate file

--- a/src/main/cliapp/src/assets/layout/sass/_content.scss
+++ b/src/main/cliapp/src/assets/layout/sass/_content.scss
@@ -10,3 +10,19 @@
 .layout-main {
     flex: 1 1 auto;
 }
+
+.wrap-word {
+    overflow-wrap : break-word;
+}
+
+.max-w-25rem {
+	max-width : 25rem;
+}
+
+.max-w-35rem {
+	max-width : 35rem;
+}
+
+.max-w-40rem {
+	max-width : 40rem;
+}
